re #613 attempt to fix a weird box height bug on IE. Should look into it a bit more

--- a/code/media/koowa/com_files/less/koowa/_files.less
+++ b/code/media/koowa/com_files/less/koowa/_files.less
@@ -83,7 +83,6 @@
     #files-tree {
         position: relative;
         overflow: auto;
-        height: 500px;
     }
 
     #files-grid {
